src/test/resources/wacc_examples/valid/classes/classDeclaration.wacc
# a simple class is declared, but not called

# Output:
# #empty#

# Program:

begin
  class c {
    int t,
    char c
    int f() is
        return 0
    end
    bool b
  }
  skip
end
