src/test/resources/wacc_examples/invalid/syntaxErr/classes/nestedClass.wacc
# second class declared inside first

# Output:
# #empty#

# Program:

begin
  class c {
    class b {
    }
  }
end
